--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,6 +2,7 @@ html {
   box-sizing: border-box;
 	font-size: 62.5%;
 	margin: 0;
+	padding: 0;
 }
 
 *, 
@@ -18,8 +19,12 @@ video {
 }
 
 body{
+	font-size: 1.6rem;
 	min-width: 320px;
 	font-size: 14px;
+	margin: 0;
+	padding: 0;
+	background-color: #f1f1f1;
 }
   
 header {
@@ -28,6 +33,35 @@ header {
 
 .header_title {
 
+}
+
+/*
+**Services
+*/
+
+.services_container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+
+	.services_item {
+		background-color: #fff;
+		width: 100%;
+		margin: 1rem 0;
+		padding: 1rem;
+		text-align: center;
+	}
+}
+
+.gallery_container {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+
+	.gallery_item {
+		width: 100%;
+		margin: 1rem;
+	}
 }
 footer {
 
