--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -21,7 +21,6 @@ video {
 body{
 	font-size: 1.6rem;
 	min-width: 320px;
-	font-size: 14px;
 	margin: 0;
 	padding: 0;
 	background-color: #f1f1f1;
@@ -49,7 +48,7 @@ header {
 		width: 100%;
 		margin: 1rem 0;
 		padding: 1rem;
-		text-align: center;
+		//text-align: center;
 	}
 }
 
