--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -42,14 +42,14 @@ header {
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
+}
 
-	.services_item {
-		background-color: #fff;
-		width: 100%;
-		margin: 1rem 0;
-		padding: 1rem;
-		//text-align: center;
-	}
+.services_item {
+	background-color: #fff;
+	width: 100%;
+	margin: 1rem 0;
+	padding: 1rem;
+	text-align: center;
 }
 
 .gallery_container {
@@ -64,4 +64,25 @@ header {
 }
 footer {
 
+}
+
+@media screen and (min-width: 600px) { 
+	body{
+		background-color: blue;
+	}
+
+	.services_item {
+		width: calc(50% - 2rem);
+		margin: 1rem;
+	}
+}
+
+@media screen and (min-width: 900px) { 
+	body {
+		background-color: pink;
+	}
+
+	.services_item {
+		width: calc(33.3333% - 2rem);
+	}
 }
