Feat: Make header sticky

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -31,23 +31,62 @@ menu,
 nav, 
 section,
 img {
-  display: block;
+	display: block;
+
 }
 
-body{
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 1rem;
+}
+
+ul {
+	margin: 0;
+}
+
+body {
 	font-size: 1.6rem;
 	min-width: 320px;
 	margin: 0;
 	padding: 0;
-	background-color: #f1f1f1;
+	background-color: green;
 }
   
 header {
-
+	background-color: blueviolet;
+	margin: 0;
+	padding-top: 1rem;
+	//position: fixed;
+  //top: 0;
+  width: 100%;
+	//z-index: 1000;
+	
+	ul {
+		list-style: none;
+	}
 }
 
 .header_title {
 
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .main {
+  padding-top: 102px;
+}
+
+main {
+	padding-top: 2rem;
+	background-color: #f1f1f1;
 }
 
 /*
@@ -69,6 +108,10 @@ header {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+.services_item img {
+	margin-top: 20px;
+}
+
 .gallery_container {
 	display: flex;
 	flex-wrap: wrap;
@@ -79,20 +122,37 @@ header {
 	width: 100%;
 }
 
+.testimonials_container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.testimonial_item {
+	width: 100%;
+	border: burlywood 5px solid;
+	margin: 1rem;
+	padding: 1rem;
+	border-radius: 0 2rem 2rem 2rem;
+}
+
 footer {
 
 }
 
 @media screen and (min-width: 300px) { 
+	.gallery_container {
+		padding: 0.5rem;
+	}
+
 	.gallery_item {
 		width: calc(50% - 1rem);
+		margin: 0.5rem;
 	}
 }
 
 @media screen and (min-width: 450px) { 
 	.gallery_item {
 		width: calc(33.3333% - 1rem);
-		margin: 0.5rem;
 	}
 }
 
@@ -104,6 +164,14 @@ footer {
 
 	.gallery_item {
 		width: calc(25% - 1rem);
+	}
+
+	.testimonials_container {
+		justify-content: space-around;
+	}
+
+	.testimonial_item {
+		width: calc(50% - 2rem);
 	}
 }
 
@@ -125,6 +193,11 @@ footer {
 
 @media screen and (min-width: 1024px) { 
 	main {
+		width: 1024px;
+		margin: 0 auto;
+	}
+
+	.header_container {
 		width: 1024px;
 		margin: 0 auto;
 	}
