--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -60,18 +60,50 @@ header {
 	background-color: blueviolet;
 	margin: 0;
 	padding-top: 1rem;
-	//position: fixed;
-  //top: 0;
-  width: 100%;
-	//z-index: 1000;
+	width: 100%;
 	
 	ul {
 		list-style: none;
+		padding: 0;
+		margin: 0;
+		width: 100%;
+
+		li {
+			line-height: 1rem;
+			padding: 1.6rem;
+			text-transform: uppercase;
+		}
 	}
+
 }
 
 .header_title {
+	display: inline-block;
+}
 
+.hamburger_menu {
+	display: inline-block;
+	cursor: pointer;
+	float: right;
+	margin: 1rem;
+}
+
+.bar1, .bar2, .bar3 {
+	width: 35px;
+	height: 5px;
+	background-color: #333;
+	margin: 6px 0;
+	transition: 0.4s;
+}
+
+.change .bar1 {
+	transform: rotate(-45deg) translate(-9px, 6px);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+	transform: rotate(45deg) translate(-8px, -8px);
 }
 
 .sticky {
@@ -84,9 +116,40 @@ header {
   padding-top: 102px;
 }
 
+.nav {
+	width: 100%;
+	margin-left: auto;
+  	margin-right: auto;
+	position: absolute;
+  /* This trasform moves the drawer off canvas. */
+    transform: translate(-300px, 0);
+ /* Optionally, we animate the drawer. */
+    transition: transform 0.3s ease;
+}
+
+nav.open {
+	transform: translate(0, 0);
+	position: relative;
+}
+
 main {
 	padding-top: 2rem;
 	background-color: #f1f1f1;
+
+	h3:before { 
+		display: block; 
+		content: " "; 
+		margin-top: -80px; 
+		height: 80px; 
+		visibility: hidden; 
+		pointer-events: none;
+	}
+}
+
+.contact {
+	padding: 0.5rem;
+	background-color: aqua;
+	text-align: center;
 }
 
 /*
