--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -82,7 +82,6 @@ header {
 }
 
 .hamburger_menu {
-	display: inline-block;
 	cursor: pointer;
 	float: right;
 	margin: 1rem;
@@ -113,7 +112,7 @@ header {
 }
 
 .sticky + .main {
-  padding-top: 102px;
+  padding-top: 150px;
 }
 
 .nav {
@@ -151,6 +150,13 @@ main {
 	background-color: aqua;
 	text-align: center;
 }
+
+.jumptarget::before {
+	content:"";
+	display:block;
+	height:140px; /* fixed header height*/
+	margin:-140px 0 0; /* negative fixed header height */
+  }
 
 /*
 **Services
