--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -65,6 +65,7 @@ header {
 	padding-top: 1rem;
 	width: 100%;
 	color: #17252a;
+	z-index: 2;
 	
 	ul {
 		list-style: none;
@@ -176,6 +177,31 @@ main {
 	display:block;
 	height:140px; /* fixed header height*/
 	margin:-140px 0 0; /* negative fixed header height */
+}
+
+.hero_image {
+	background-image: url("../images/IMG_1154.JPG");
+	height: 400px;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;	
+	border-radius: 2rem;
+}
+
+.hero_text {
+	text-align: center;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: white;
+
+	h4 {
+		font-size: 5rem;
+		line-height: 5.5rem;
+		text-shadow: 0 1px 0 #000;
+	}
   }
 
 /*
@@ -239,6 +265,7 @@ footer {
 	color: #def2f1;
 	padding: 1rem;
 	font-size: 1.4rem;
+	margin-top: 3rem;
 }
 
 @media screen and (min-width: 300px) { 
