--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -181,6 +181,7 @@ main {
 
 .hero_image {
 	background-image: url("../images/IMG_1154.JPG");
+	margin: 1rem;
 	height: 400px;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -266,6 +267,16 @@ footer {
 	padding: 1rem;
 	font-size: 1.4rem;
 	margin-top: 3rem;
+
+	a {
+		color: #fff;
+		text-decoration: none;
+	}
+
+	a:hover {
+		color: #def2f1;
+		text-decoration: underline;
+	}
 }
 
 @media screen and (min-width: 300px) { 
