Feat: Make small improvements in CSS and fix typos

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -169,7 +169,8 @@ main {
 	padding-bottom: 0.5rem;
 	text-align: center;
 	color: #fff;
-	font-size: 1.2rem;
+	font-size: 2rem;
+	line-height: 3rem;
 }
 
 .jumptarget::before {
