feat: Make phone number clickable and add SEO to phone number

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -186,6 +186,15 @@ main {
 	color: #fff;
 	font-size: 2rem;
 	line-height: 3rem;
+
+	a {
+		text-decoration: none;
+		color:#fff; 
+	}
+
+	a:hover {
+		color: #fff;
+	}
 }
 
 .jumptarget::before {
