--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,43 +1,42 @@
 html {
   box-sizing: border-box;
-	font-size: 62.5%;
-	margin: 0;
-	padding: 0;
+  font-size: 62.5%;
+  margin: 0;
+  padding: 0;
 }
 
-*, 
-*:before, 
+*,
+*:before,
 *:after {
   box-sizing: inherit;
 }
 
-img, 
-embed, 
-object, 
+img,
+embed,
+object,
 video {
   max-width: 100%;
 }
 
-img[data-sizes="auto"] { 
-	display: block; 
-	width: 100%; 
+img[data-sizes="auto"] {
+  display: block;
+  width: 100%;
 }
 
-article, 
-aside, 
-canvas, 
-details, 
-figcaption, 
-figure, 
-footer, 
-header, 
-hgroup, 
-menu, 
-nav, 
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
 section,
 img {
-	display: block;
-
+  display: block;
 }
 
 h1,
@@ -46,91 +45,92 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 1rem;
+  margin: 1rem;
 }
 
 ul {
-	margin: 0;
+  margin: 0;
 }
 
 body {
-	font-size: 1.6rem;
-	min-width: 320px;
-	margin: 0;
-	padding: 0;
-	background-color: #def2f1;
-	color: #585858;
-	font-family: 'Roboto', sans-serif;
-	line-height: 1.8rem;
+  font-size: 1.6rem;
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
+  background-color: #def2f1;
+  color: #585858;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.8rem;
 }
-  
+
 header {
-	background-color: #3aafa9;
-	margin: 0;
-	padding-top: 1rem;
-	width: 100%;
-	color: #17252a;
-	z-index: 2;
-	
-	ul {
-		list-style: none;
-		padding: 0;
-		margin: 0;
-		width: 100%;
+  background-color: #3aafa9;
+  margin: 0;
+  padding-top: 1rem;
+  width: 100%;
+  color: #17252a;
+  z-index: 2;
 
-		li {
-			line-height: 1rem;
-			padding: 1.6rem;
-			text-transform: uppercase;
-		}
-	}
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    width: 100%;
 
+    li {
+      line-height: 1rem;
+      padding: 1.6rem;
+      text-transform: uppercase;
+    }
+  }
 }
 
 .header_title {
-	display: inline-block;
-	color: #fff;
-	background-color: #17252a;
-	padding: 1rem 2rem;
-	border-radius: 3rem;
-	font-weight: 300;
-	font-size: 2rem;
+  display: inline-block;
+  color: #fff;
+  background-color: #17252a;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  font-weight: 300;
+  font-size: 2rem;
 
-	a {
-		color: #fff;
-		text-decoration: none;
-	}
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
 
-	a:hover {
-		text-decoration: underline;
-		font-size: 2.3rem;
-	}
+  a:hover {
+    text-decoration: underline;
+    font-size: 2.3rem;
+  }
 }
 
 .hamburger_menu {
-	cursor: pointer;
-	float: right;
-	margin: 1rem;
+  cursor: pointer;
+  float: right;
+  margin: 1rem;
 }
 
-.bar1, .bar2, .bar3 {
-	width: 35px;
-	height: 5px;
-	background-color: #17252a;
-	margin: 6px 0;
-	transition: 0.4s;
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #17252a;
+  margin: 6px 0;
+  transition: 0.4s;
 }
 
 .change .bar1 {
-	transform: rotate(-45deg) translate(-9px, 6px);
+  transform: rotate(-45deg) translate(-9px, 6px);
 }
 
 .change .bar2 {
-	opacity: 0;
+  opacity: 0;
 }
 
 .change .bar3 {
-	transform: rotate(45deg) translate(-8px, -8px);
+  transform: rotate(45deg) translate(-8px, -8px);
 }
 
 .sticky {
@@ -144,296 +144,307 @@ header {
 }
 
 .nav {
-	width: 100%;
-	margin-left: auto;
-  	margin-right: auto;
-	position: absolute;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  position: absolute;
   /* This trasform moves the drawer off canvas. */
-    transform: translate(-1000px, 0);
- /* Optionally, we animate the drawer. */
-	transition: transform 0.5s ease;
-	
-	a {
-		color: #fff;
-		text-decoration: none;
-	}
+  transform: translate(-1000px, 0);
+  /* Optionally, we animate the drawer. */
+  transition: transform 0.5s ease;
 
-	a:hover {
-		color: #17252a;
-		text-decoration: underline;
-	}
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #17252a;
+    text-decoration: underline;
+  }
 }
 
 nav.open {
-	transform: translate(0, 0);
-	position: relative;
+  transform: translate(0, 0);
+  position: relative;
+}
 
+.slogan {
+  background-color: #f3a325;
+  padding: 3rem 1rem;
+  border-radius: 2rem;
+  color: #17252a;
+  text-align: center;
+  text-shadow: 1px 1px 2px #fff;
+  font-size: 3.2rem;
 }
 
 main {
-	padding-top: 2rem;
+  padding-top: 2rem;
 
-	h3 {
-		margin: 10rem 1rem 5rem 1rem;
-		font-size: 4rem;
-		color: #17252a; 
-	}
+  h3 {
+    margin: 10rem 1rem 5rem 1rem;
+    font-size: 4rem;
+    color: #17252a;
+  }
 }
 
 .contact {
-	padding-bottom: 0.5rem;
-	text-align: center;
-	color: #fff;
-	font-size: 2rem;
-	line-height: 3rem;
+  padding-bottom: 0.5rem;
+  text-align: center;
+  color: #fff;
+  font-size: 2rem;
+  line-height: 3rem;
 
-	a {
-		text-decoration: none;
-		color:#fff; 
-	}
+  a {
+    text-decoration: none;
+    color: #fff;
+  }
 
-	a:hover {
-		color: #fff;
-	}
+  a:hover {
+    color: #fff;
+  }
 }
 
 .jumptarget::before {
-	content:"";
-	display:block;
-	height:140px; /* fixed header height*/
-	margin:-140px 0 0; /* negative fixed header height */
+  content: "";
+  display: block;
+  height: 140px; /* fixed header height*/
+  margin: -140px 0 0; /* negative fixed header height */
 }
 
 .hero #cafe {
-    width: 100%;
-    display: inline-block;
-    vertical-align: middle;
-    font: 0/0 serif;
-    text-shadow: none;
-    color: transparent;
-    background-size: 100%;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+  font: 0/0 serif;
+  text-shadow: none;
+  color: transparent;
+  background-size: 100%;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 .hero #cafe .inner {
-    padding-top: 63.35%; /* height/width of image */
-    display: block;
-    height: 0;
+  padding-top: 63.35%; /* height/width of image */
+  display: block;
+  height: 0;
 }
 
 /* default screen, non-retina */
-.hero #cafe { background-image: url("../images/IMG_1124.jpg"); }
+.hero #cafe {
+  background-image: url("../images/IMG_1124.jpg");
+}
 
 .hero_image {
-	background-image: url("../images/IMG_1124.JPG");
-	margin: 1rem;
-	height: 400px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;	
-	border-radius: 2rem;
+  background-image: url("../images/IMG_1124.JPG");
+  margin: 1rem;
+  height: 400px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  border-radius: 2rem;
 }
 
 .hero_text {
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: white;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
 
-	h4 {
-		font-size: 5rem;
-		line-height: 5.5rem;
-		text-shadow: 0 1px 0 #000;
-	}
+  h4 {
+    font-size: 5rem;
+    line-height: 5.5rem;
+    text-shadow: 0 1px 0 #000;
   }
+}
 
 /*
 **Services
 */
 
 .services_container {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .services_item {
-	font-size: 1.8rem;
-	background-color: #fff;
-	width: 100%;
-	margin: 1rem 0;
-	padding: 1rem;
-	text-align: center;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  font-size: 1.8rem;
+  background-color: #fff;
+  width: 100%;
+  margin: 1rem 0;
+  padding: 1rem;
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .services_item img {
-	margin-top: 20px;
+  margin-top: 20px;
 }
 
 .gallery_container {
-	display: flex;
-	flex-wrap: wrap;
-	width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .gallery_item {
-	width: 100%;
+  width: 100%;
 }
 
 .testimonials_container {
-	display: flex;
-	flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .testimonial_item {
-	width: 100%;
-	border: #17252a 5px solid;
-	margin: 1rem;
-	padding: 1rem;
-	border-radius: 2rem;
-	background-color: #fff;
+  width: 100%;
+  border: #17252a 5px solid;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 2rem;
+  background-color: #fff;
 }
 
 .client {
-	color: #fff;
-	background-color: #17252a;
-	padding: 0.5rem;
-	text-align: center;
+  color: #fff;
+  background-color: #17252a;
+  padding: 0.5rem;
+  text-align: center;
 }
 
 .more {
-	text-align: center;
-	margin-top: 3.75rem;
-	line-height: 1.5rem;
-	margin-bottom: 1.25rem;
-	border-top: 1px solid rgba(0, 0, 0, .3);
-	font-size: 2rem;
+  text-align: center;
+  margin-top: 3.75rem;
+  line-height: 1.5rem;
+  margin-bottom: 1.25rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 2rem;
 
-	span {
-		position: relative;
-		top: -1.8rem;
-		display: block;
-		width: 26rem;
-		margin: 0 auto;
-		padding: 1rem 0;
-		background-color: #def2f1;
-	}
-	
-	a {
-		color: #0a526e;
-		background-image: none;
-	}
+  span {
+    position: relative;
+    top: -1.8rem;
+    display: block;
+    width: 26rem;
+    margin: 0 auto;
+    padding: 1rem 0;
+    background-color: #def2f1;
+  }
 
-	.icon-google {
-		background-image: url('/images/google.svg');
-		padding-left: 2.5rem;
-		background-repeat: no-repeat;
-	}
+  a {
+    color: #0a526e;
+    background-image: none;
+  }
+
+  .icon-google {
+    background-image: url("/images/google.svg");
+    padding-left: 2.5rem;
+    background-repeat: no-repeat;
+  }
 }
 
 footer {
-	text-align: center;
-	background-color: #17252a;
-	color: #def2f1;
-	padding: 1rem;
-	font-size: 1.4rem;
-	margin-top: 3rem;
+  text-align: center;
+  background-color: #17252a;
+  color: #def2f1;
+  padding: 1rem;
+  font-size: 1.4rem;
+  margin-top: 3rem;
 
-	a {
-		color: #fff;
-		text-decoration: none;
-	}
+  a {
+    color: #fff;
+    text-decoration: none;
+  }
 
-	a:hover {
-		color: #def2f1;
-		text-decoration: underline;
-	}
+  a:hover {
+    color: #def2f1;
+    text-decoration: underline;
+  }
 }
 
-@media screen and (min-width: 300px) { 
-	.gallery_container {
-		padding: 0.5rem;
-	}
+@media screen and (min-width: 300px) {
+  .gallery_container {
+    padding: 0.5rem;
+  }
 
-	.gallery_item {
-		width: calc(50% - 1rem);
-		margin: 0.5rem;
-	}
+  .gallery_item {
+    width: calc(50% - 1rem);
+    margin: 0.5rem;
+  }
 
-	.hero_image {
-		background-image: url("../images/IMG_1124_500.jpg");
-	}
+  .hero_image {
+    background-image: url("../images/IMG_1124_500.jpg");
+  }
 }
 
-@media screen and (min-width: 450px) { 
-	.gallery_item {
-		width: calc(33.3333% - 1rem);
-	}
+@media screen and (min-width: 450px) {
+  .gallery_item {
+    width: calc(33.3333% - 1rem);
+  }
 
-	.hero_image {
-		background-image: url("../images/IMG_1124_700.jpg");
-	}
+  .hero_image {
+    background-image: url("../images/IMG_1124_700.jpg");
+  }
 }
 
-@media screen and (min-width: 600px) { 
-	.services_item {
-		width: calc(50% - 2rem);
-		margin: 1rem;
-	}
+@media screen and (min-width: 600px) {
+  .services_item {
+    width: calc(50% - 2rem);
+    margin: 1rem;
+  }
 
-	.gallery_item {
-		width: calc(25% - 1rem);
-	}
+  .gallery_item {
+    width: calc(25% - 1rem);
+  }
 
-	.testimonials_container {
-		justify-content: space-around;
-	}
+  .testimonials_container {
+    justify-content: space-around;
+  }
 
-	.testimonial_item {
-		width: calc(50% - 2rem);
-	}
+  .testimonial_item {
+    width: calc(50% - 2rem);
+  }
 
-	.hero_image {
-		background-image: url("../images/IMG_1124_900.jpg");
-	}
+  .hero_image {
+    background-image: url("../images/IMG_1124_900.jpg");
+  }
 }
 
-@media screen and (min-width: 750px) { 
-	.gallery_item {
-		width: calc(20% - 1rem);
-	}
+@media screen and (min-width: 750px) {
+  .gallery_item {
+    width: calc(20% - 1rem);
+  }
 
-	.hero_image {
-		background-image: url("../images/IMG_1124_1000.jpg");
-	}
+  .hero_image {
+    background-image: url("../images/IMG_1124_1000.jpg");
+  }
 }
 
-@media screen and (min-width: 900px) { 
-	.services_item {
-		width: calc(33.3333% - 2rem);
-	}
+@media screen and (min-width: 900px) {
+  .services_item {
+    width: calc(33.3333% - 2rem);
+  }
 
-	.gallery_item {
-		width: calc(16.6666% - 1rem);
-	}
+  .gallery_item {
+    width: calc(16.6666% - 1rem);
+  }
 
-	.hero_image {
-		background-image: url("../images/IMG_1124_1500.jpg");
-	}
+  .hero_image {
+    background-image: url("../images/IMG_1124_1500.jpg");
+  }
 }
 
-@media screen and (min-width: 1024px) { 
-	main {
-		width: 1024px;
-		margin: 0 auto;
-	}
+@media screen and (min-width: 1024px) {
+  main {
+    width: 1024px;
+    margin: 0 auto;
+  }
 
-	.header_container {
-		width: 1024px;
-		margin: 0 auto;
-	}
+  .header_container {
+    width: 1024px;
+    margin: 0 auto;
+  }
 }
