--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -177,6 +177,10 @@ nav.open {
   text-align: center;
   text-shadow: 1px 1px 2px #fff;
   font-size: 3.2rem;
+
+  .license_number {
+    font-size: 2.5rem;
+  }
 }
 
 main {
