--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -350,6 +350,15 @@ main {
   }
 }
 
+.reviews {
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  padding-top: 20px;
+  margin-top: 50px;
+  img {
+    margin: auto;
+  }
+}
+
 footer {
   text-align: center;
   background-color: #17252a;
